--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GroupProject">
         <activity
+            android:name=".DetailedItemActivity"
+            android:exported="true" />
+        <activity
             android:name=".CaoGaoList"
             android:exported="true" />
         <activity
